# MirrorVM

./: .gitignore  BenchImports.cs  Constants.cs  ControlFlowOptimizer.cs  Dynamic.cs  Frame.cs  Generated.cs  GeneratedStatic.cs  Hell.cs  HellBuilder.cs  IR.ControlFlow.cs  IR.Debug.cs  IR.Destinations.cs  IR.Expressions.cs  IR.cs  Interpreter.cs  LICENSE  Mirror.Call.cs  Mirror.ControlFlow.cs  Mirror.F64.cs  Mirror.Globals.cs  Mirror.Locals.cs  Mirror.Memory.cs  Mirror.cs  MirrorBuilder.cs  MirrorJIT.cs  MirrorVM.csproj  MirrorVM.sln  Program.cs  README.md  TestBarriers.cs  Tests.cs  Util.cs  WasmHell.Call.cs  WasmHell.F32.cs  WasmHell.F64.cs  WasmHell.Globals.cs  WasmHell.I32.cs  WasmHell.I64.cs  WasmHell.Locals.cs  (+19 more)
Assets/: rust_bench.wasm
Editor/: MyEditorMenu.cs
MirrorVM/: ControlFlowOptimizer.cs  Frame.cs  IR.ControlFlow.cs  IR.Debug.cs  IR.Destinations.cs  IR.cs  Mirror.Call.cs  Mirror.Constants.cs  Mirror.ControlFlow.cs  Mirror.F32.cs  Mirror.F64.cs  Mirror.Globals.cs  Mirror.I32.cs  Mirror.I64.cs  Mirror.Locals.cs  Mirror.Memory.cs  Mirror.Statements.cs  Mirror.cs  MirrorBuilder.cs  Util.cs  WasmInstance.cs  WasmModule.cs
ProjectSettings/: Collision.config  Cursors.config  Input.config  Physics.config
barrier_tests/: funky.wasm  global.wasm  local_set.wasm  local_tee.wasm  memory.wasm
code/: BenchRunner.cs  Menu.razor  Menu.razor.scss  Wasm4.cs  Wasm4Player.razor  Wasm4Player.razor.scss  Wasm4UI.razor  Wasm4UI.razor.scss
rust_bench/: Cargo.toml  _rust-toolchain.toml
rust_bench/src/: data.json  lib.rs  main.rs  physics.rs  prospero.rs
(+29 files in other folders)
